--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -262,7 +262,7 @@
 </article>
 
 
-<!-- 
+
 <section class="hay-mas">
   <div class="content-margins">
     <div class="hay-mas-header">
@@ -314,7 +314,7 @@
       </div>
     </div>
   </div>
-</section> -->
+</section>
 
 
 {% include "footer.html" %}
