--- a/templates/boxes/event.html
+++ b/templates/boxes/event.html
@@ -102,7 +102,7 @@
           <h6>Happenings</h6>
           <div class="hay-mas-link-icon with-padding">
             <img src="{{boxes.events.all[0].images[0].url}}" alt="{{boxes.events.all[0].images[0].alt_text}}">
-            <span></span>
+            <span>{{boxes.events.all[0].fields.hover_text}}</span>
           </div>
           <h4>{{boxes.events.all[0].name}}</h4>
         </a>
