--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -285,7 +285,7 @@
           <h6>Happenings</h6>
           <div class="hay-mas-link-icon with-padding">
             <img src="{{boxes.events.all[0].images[0].url}}" alt="{{boxes.events.all[0].images[0].alt_text}}">
-            <span></span>
+            <span>{{boxes.events.all[0].fields.hover_text}}</span>
           </div>
           <h4>{{boxes.events.all[0].name}}</h4>
         </a>
@@ -296,7 +296,7 @@
           <h6>El Blog</h6>
           <div class="hay-mas-link-icon with-padding">
             <img src="{{boxes.blog.all[0].image.url}}" alt="{{boxes.blog.all[0].image.alt_text}}">
-            <span></span>
+            <span>{{boxes.blog.all[0].fields.hover_text}}</span>
           </div>
           <h4>{{boxes.blog.all[0].name}}</h4>
         </a>
@@ -306,10 +306,10 @@
         <a href="{{pages.by_slug.shop.url}}">
           <h6>Shop</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{boxes.shop.all[0].fields.global_icon.url}}" alt="{{boxes.shop.all[0].fields.global_icon.alt}}">
-            <span>{{boxes.shop.all[0].fields.hover_text}}</span>
+            <img src="{{pages.by_slug.shop.fields['online-products'].products[0].image.url}}" alt="{{pages.by_slug.shop.fields['online-products'].products[0].image.alt_text}}">
+            <span>{{pages.by_slug.shop.fields['online-products'].products[0].hover_text}}</span>
           </div>
-          <h4>{{boxes.shop.all[0].name}}</h4>
+          <h4>{{pages.by_slug.shop.fields['online-products'].products[0].name}}</h4>
         </a>
       </div>
     </div>
