--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -263,7 +263,7 @@
 
 
 
-<section class="hay-mas">
+<!-- <section class="hay-mas">
   <div class="content-margins">
     <div class="hay-mas-header">
       <h6>¡Hay Más!</h6><span>Check out everything the Mercado has to offer.</span>
@@ -314,7 +314,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 {% include "footer.html" %}
