--- a/templates/boxes/event.html
+++ b/templates/boxes/event.html
@@ -80,7 +80,7 @@
 
 </article>
 
-<!-- <section class="hay-mas">
+<section class="hay-mas">
   <div class="content-margins">
     <div class="hay-mas-header">
       <h6>¡Hay Más!</h6><span>Check out everything the Mercado has to offer.</span>
@@ -131,6 +131,6 @@
       </div>
     </div>
   </div>
-</section> -->
+</section>
 
 {% include "footer.html" %}
