event feed min height unset

--- a/assets/css/_happenings.scss
+++ b/assets/css/_happenings.scss
@@ -71,7 +71,7 @@ h2{
     margin-bottom: 30px;
     transition: 2s height ;
     transition-timing-function: cubic-bezier(0.25, 0.1, 0.09, 0.99);
-      min-height:535px;
+      // min-height:535px;
     .home-happenings-event{
       width: 24%;
       padding: 10px;
