show blog on home

--- a/templates/index.html
+++ b/templates/index.html
@@ -370,7 +370,7 @@
   </div>
 </section>
 
-<!-- <section class="home-el-blog">
+<section class="home-el-blog">
   <div class="content-margins">
     <div class="section-title-container">
       <img src="{{ static('img/yellow_triangle.png')}}" alt="">
@@ -412,7 +412,7 @@
       <a href="{{pages.by_slug['blog'].url}}" class='more-info'>View All</a>
     </div>
   </div>
-</section> -->
+</section>
 
 <section class="ig-feed">
   <div class="content-margins">
