has mas el blog image

--- a/templates/boxes/event.html
+++ b/templates/boxes/event.html
@@ -97,7 +97,7 @@
         </a>
       </div>
 
-      <div class="hay-mas-link">
+      <!-- <div class="hay-mas-link">
         <a href="{{boxes.events.all[0].url}}">
           <h6>Happenings</h6>
           <div class="hay-mas-link-icon with-padding">
@@ -106,7 +106,7 @@
           </div>
           <h4>{{boxes.events.all[0].name}}</h4>
         </a>
-      </div>
+      </div> -->
 
       <div class="hay-mas-link">
         <a href="{{boxes.blog.all[0].url}}">
