--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -280,7 +280,7 @@
         </a>
       </div>
 
-      <div class="hay-mas-link">
+      <!-- <div class="hay-mas-link">
         <a href="{{pages.by_slug['hay-mas'].fields.grid.happenings_box.url}}">
           <h6>Happenings</h6>
           <div class="hay-mas-link-icon with-padding">
@@ -289,13 +289,13 @@
           </div>
           <h4>{{pages.by_slug['hay-mas'].fields.grid.happenings_box.name}}</h4>
         </a>
-      </div>
+      </div> -->
 
       <div class="hay-mas-link">
         <a href="{{pages.by_slug['hay-mas'].fields.grid.blog_box.url}}">
           <h6>El Blog</h6>
           <div class="hay-mas-link-icon with-padding">
-            <img src="{{pages.by_slug['hay-mas'].fields.grid.blog_box.fields.global_icon.url}}" alt="{{pages.by_slug['hay-mas'].fields.grid.blog_box.fields.global_icon.alt_text}}">
+            <img src="{{pages.by_slug['hay-mas'].fields.grid.blog_box.fields.image.url}}" alt="{{pages.by_slug['hay-mas'].fields.grid.blog_box.fields.image.alt_text}}">
             <span>{{pages.by_slug['hay-mas'].fields.grid.blog_box.fields.hover_text}}</span>
           </div>
           <h4>{{pages.by_slug['hay-mas'].fields.grid.blog_box.name}}</h4>
