--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -295,7 +295,7 @@
         <a href="{{pages.by_slug['hay-mas'].fields.grid.blog_box.url}}">
           <h6>El Blog</h6>
           <div class="hay-mas-link-icon with-padding">
-            <img src="{{pages.by_slug['hay-mas'].fields.grid.blog_box.fields.image.url}}" alt="{{pages.by_slug['hay-mas'].fields.grid.blog_box.fields.image.alt_text}}">
+            <img src="{{pages.by_slug['hay-mas'].fields.grid.blog_box.image.url}}" alt="{{pages.by_slug['hay-mas'].fields.grid.blog_box.image.alt_text}}">
             <span>{{pages.by_slug['hay-mas'].fields.grid.blog_box.fields.hover_text}}</span>
           </div>
           <h4>{{pages.by_slug['hay-mas'].fields.grid.blog_box.name}}</h4>
