blog single restruct

--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -294,7 +294,7 @@
       <div class="hay-mas-link">
         <a href="{{pages.by_slug['hay-mas'].fields.grid.blog_box.url}}">
           <h6>El Blog</h6>
-          <div class="hay-mas-link-icon with-padding">
+          <div class="hay-mas-link-icon">
             <img src="{{pages.by_slug['hay-mas'].fields.grid.blog_box.image.url}}" alt="{{pages.by_slug['hay-mas'].fields.grid.blog_box.image.alt_text}}">
             <span>{{pages.by_slug['hay-mas'].fields.grid.blog_box.fields.hover_text}}</span>
           </div>
