--- a/templates/boxes/news_item.html
+++ b/templates/boxes/news_item.html
@@ -10,7 +10,7 @@
 <article class="single-blog">
   <div class="single-blog-header-content">
     <div class="single-blog-img">
-      <img src="{{current.image.url}}" alt="{{current.image.alt_text}}">
+      <img src="{{ current.image.url|xlarge }}" alt="{{current.image.alt_text}}">
       <div class="article-info-slide">
         <h6>{{current.name}}</h6>
         <span>Share Article: </span>
