--- a/templates/boxes/kiosks.html
+++ b/templates/boxes/kiosks.html
@@ -96,59 +96,61 @@
 </section>
 
 
-<!-- <section class="hay-mas">
+<section class="hay-mas">
   <div class="content-margins">
     <div class="hay-mas-header">
       <h6>¡Hay Más!</h6><span>Check out everything the Mercado has to offer.</span>
     </div>
     <div class="hay-mas-links">
       <div class="hay-mas-link">
-        <a href="{{boxes.kiosks.all[0].url}}">
+        <a href="{{pages.by_slug['hay-mas'].fields.grid.kiosk_box.url}}">
           <h6>Kiosks</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{boxes.kiosks.all[0].fields.global_icon.url}}" alt="{{boxes.kiosks.all[0].fields.global_icon.alt_text}}">
-            <span>{{boxes.kiosks.all[0].fields.hover_text}}</span>
+            <img src="{{pages.by_slug['hay-mas'].fields.grid.kiosk_box.fields.global_icon.url}}" alt="{{pages.by_slug['hay-mas'].fields.grid.kiosk_box.fields.global_icon.alt}}">
+            <span>{{pages.by_slug['hay-mas'].fields.grid.kiosk_box.fields.hover_text}}</span>
           </div>
-          <h4>{{boxes.kiosks.all[0].name}}</h4>
+          <h4>{{pages.by_slug['hay-mas'].fields.grid.kiosk_box.name}}</h4>
         </a>
       </div>
 
-      <div class="hay-mas-link">
-        <a href="{{boxes.events.all[0].url}}">
+      <!-- <div class="hay-mas-link">
+        <a href="{{pages.by_slug['hay-mas'].fields.grid.happenings_box.url}}">
           <h6>Happenings</h6>
           <div class="hay-mas-link-icon with-padding">
-            <img src="{{boxes.events.all[0].images[0].url}}" alt="{{boxes.events.all[0].images[0].alt_text}}">
-            <span></span>
+            <img src="{{pages.by_slug['hay-mas'].fields.grid.happenings_box.fields.global_icon.url}}" alt="{{pages.by_slug['hay-mas'].fields.grid.happenings_box.fields.global_icon.alt_text}}">
+            <span>{{pages.by_slug['hay-mas'].fields.grid.happenings_box.fields.hover_text}}</span>
           </div>
-          <h4>{{boxes.events.all[0].name}}</h4>
+          <h4>{{pages.by_slug['hay-mas'].fields.grid.happenings_box.name}}</h4>
         </a>
-      </div>
+      </div> -->
 
       <div class="hay-mas-link">
-        <a href="{{boxes.blog.all[0].url}}">
+        <a href="{{pages.by_slug['hay-mas'].fields.grid.blog_box.url}}">
           <h6>El Blog</h6>
-          <div class="hay-mas-link-icon with-padding">
-            <img src="{{boxes.blog.all[0].image.url}}" alt="{{boxes.blog.all[0].image.alt_text}}">
-            <span></span>
+          <div class="hay-mas-link-icon">
+            <img src="{{pages.by_slug['hay-mas'].fields.grid.blog_box.image.url}}" alt="{{pages.by_slug['hay-mas'].fields.grid.blog_box.image.alt_text}}">
+            <span>{{pages.by_slug['hay-mas'].fields.grid.blog_box.fields.hover_text}}</span>
           </div>
-          <h4>{{boxes.blog.all[0].name}}</h4>
+          <h4>{{pages.by_slug['hay-mas'].fields.grid.blog_box.name}}</h4>
         </a>
       </div>
 
+
+
+{% set key =  (range(1, boxes.shop.all|length) | random) - 1 %}
       <div class="hay-mas-link">
-        <a href="{{pages.by_slug.shop.url}}">
+        <a href="{{boxes.shop.all[key].url}}">
           <h6>Shop</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{pages.by_slug.shop.fields['online-products'].products[0].image.url}}" alt="{{pages.by_slug.shop.fields['online-products'].products[0].image.alt_text}}">
-            <span>{{pages.by_slug.shop.fields['online-products'].products[0].hover_text}}</span>
+            <img src="{{boxes.shop.all[key].fields.global_icon.url}}" alt="{{boxes.shop.all[key].fields.global_icon.alt_text}}">
+            <span>{{boxes.shop.all[key].fields.hover_text}}</span>
           </div>
-          <h4>{{pages.by_slug.shop.fields['online-products'].products[0].name}}</h4>
+          <h4>{{boxes.shop.all[key].name}}</h4>
         </a>
       </div>
     </div>
   </div>
 </section>
- -->
 
 
 
