--- a/templates/boxes/kiosks.html
+++ b/templates/boxes/kiosks.html
@@ -102,14 +102,18 @@
       <h6>¡Hay Más!</h6><span>Check out everything the Mercado has to offer.</span>
     </div>
     <div class="hay-mas-links">
+
+{% set kioskKey =  (range(0, boxes.kiosks.all|length) | random) %}
       <div class="hay-mas-link">
-        <a href="{{pages.by_slug['hay-mas'].fields.grid.kiosk_box.url}}">
+        <a href="{{boxes.kiosks.all[kioskKey].url}}">
           <h6>Kiosks</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{pages.by_slug['hay-mas'].fields.grid.kiosk_box.fields.global_icon.url}}" alt="{{pages.by_slug['hay-mas'].fields.grid.kiosk_box.fields.global_icon.alt}}">
-            <span>{{pages.by_slug['hay-mas'].fields.grid.kiosk_box.fields.hover_text}}</span>
+            <img src="{{boxes.kiosks.all[kioskKey].fields.global_icon.url}}" alt="{{pages.by_slug['hay-mas'].fields.grid.kiosk_box.fields.global_icon.alt}}">
+            {% if boxes.kiosks.all[kioskKey].fields.hover_text %}
+              <span>{{boxes.kiosks.all[kioskKey].fields.hover_text}}</span>
+            {% endif %}
           </div>
-          <h4>{{pages.by_slug['hay-mas'].fields.grid.kiosk_box.name}}</h4>
+          <h4>{{boxes.kiosks.all[kioskKey].name}}</h4>
         </a>
       </div>
 
@@ -124,14 +128,25 @@
         </a>
       </div> -->
 
+
+
+      {% for event in boxes.events.all %}
+        {{event.starts}}
+
+
+      {% endfor %}
+
+{% set blogKey =  (range(0, boxes.blog.all|length) | random) %}
       <div class="hay-mas-link">
-        <a href="{{pages.by_slug['hay-mas'].fields.grid.blog_box.url}}">
+        <a href="{{boxes.blog.all[blogKey].url}}">
           <h6>El Blog</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{pages.by_slug['hay-mas'].fields.grid.blog_box.image.url}}" alt="{{pages.by_slug['hay-mas'].fields.grid.blog_box.image.alt_text}}">
-            <span>{{pages.by_slug['hay-mas'].fields.grid.blog_box.fields.hover_text}}</span>
+            <img src="{{boxes.blog.all[blogKey].image.url}}" alt="{{boxes.blog.all[blogKey].image.alt_text}}">
+            {% if boxes.blog.all[blogKey].fields.hover_text %}
+              <span>{{boxes.blog.all[blogKey].fields.hover_text}}</span>
+            {% endif %}
           </div>
-          <h4>{{pages.by_slug['hay-mas'].fields.grid.blog_box.name}}</h4>
+          <h4>{{boxes.blog.all[blogKey].name}}</h4>
         </a>
       </div>
 
@@ -143,7 +158,9 @@
           <h6>Shop</h6>
           <div class="hay-mas-link-icon">
             <img src="{{boxes.shop.all[key].fields.global_icon.url}}" alt="{{boxes.shop.all[key].fields.global_icon.alt_text}}">
-            <span>{{boxes.shop.all[key].fields.hover_text}}</span>
+            {% if boxes.shop.all[key].fields.hover_text %}
+              <span>{{boxes.shop.all[key].fields.hover_text}}</span>
+            {% endif %}
           </div>
           <h4>{{boxes.shop.all[key].name}}</h4>
         </a>
@@ -151,7 +168,6 @@
     </div>
   </div>
 </section>
-
 
 
 </div>
