--- a/templates/index.html
+++ b/templates/index.html
@@ -341,7 +341,7 @@
 
 
         <article class="kiosk-box">
-          <a href="https://shop.littlespain.com/" target='_blank'>
+          <a href="https://shop.littlespain.com/">
             <div class="kiosk-box-img kiosk-bordered-img">
               <img src="{{pages.by_slug.shop.fields['online-products'].products[0].image.url}}" alt="{{pages.by_slug.shop.fields['online-products'].products[0].image.alt_text}}">
 
