--- a/templates/shop.html
+++ b/templates/shop.html
@@ -28,7 +28,7 @@
 
 {% for shop in current.fields['online-products'].products %}
       <article class="kiosk-box">
-          <a href="{{shop.link}}" target='_blank'>
+          <a href="{{shop.link}}">
             <div class="kiosk-box-img kiosk-bordered-img">
               <img src="{{shop.image.url}}" alt="{{shop.image.alt_text}}">
               <h4>{{shop.hover_text}}</h4>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="see-all-shops">
-      <a class="more-info" href="https://shop.littlespain.com/" target='_blank'>See More</a>
+      <a class="more-info" href="https://shop.littlespain.com/" >See More</a>
     </div>
 
   </div>
