--- a/templates/events_landing.html
+++ b/templates/events_landing.html
@@ -40,10 +40,13 @@
   {% for event in boxes.events.all %}
     <a href="{{event.url}}" class="home-happenings-event">
       <div class='home-happenings-upper'>
-        <h6>{{event.starts|date('%B %d')}}</h6>
+        <h6>{{event.starts|date('%B %d')}}
+
         {% if event.starts|date('%B %d') != event.ends|date('%B %d') %}
-          diff day
+          - {{event.starts|date('%B %d')}}
         {% endif %}
+        </h6>
+        <!-- {{event.ends|date('%B %d')}} -->
         <h3>{{event.name}}</h3>
         <p>{{event.fields.dek}}</p>
       </div>
