--- a/assets/css/_newsletter-popup.scss
+++ b/assets/css/_newsletter-popup.scss
@@ -13,7 +13,8 @@
   pointer-events: none;
   @include transform(translateY(100%));
   transition: transform 0.4s, opacity 0.4s;
-
+  max-height: 100vh;
+  overflow: scroll;
   &.opened, &:target {
     opacity: 1;
     pointer-events: auto;
