--- a/templates/header.html
+++ b/templates/header.html
@@ -141,7 +141,7 @@
 
 
   <!-- NEW FORM -->
-  <script type="text/javascript">var loc = "https://web.littlespain.com/thinkfoodgroupcom-aqnie/pages/";</script>
+  <script type="text/javascript">var loc = "https://analytics.clickdimensions.com/thinkfoodgroupcom-aqnie/pages/";</script>
   <script type="text/javascript" src="https://az124611.vo.msecnd.net/web/v10/CDWidget.js"></script>
 
 
