one form, two places

--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -10,6 +10,11 @@
       padding: 56px 24px;
     }
   }
+  .requiredInfo{
+    div{
+      color: $toro_red;
+    }
+  }
 }
 
 .newsletter-capture-title {
