--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,39 +11,8 @@
     <h2 class="newsletter-capture-title">
       Stay connected.
     </h2>
-    <!-- <form class="newsletter-capture-form">
-      <label>
-        <span class="screen-reader-text">Your email: </span>
-        <input type="email" class="red-input" placeholder="¡Your Email!">
-      </label>
-      <button class="outline-button" type="submit">
-        Submit
-      </button>
-    </form>
- -->
 
-
- {% include "form.html" %}
-
-    <!-- <form action="https://app.e2ma.net/app2/audience/signup/1873742/1887124/?r=signup" id="signup" method="post" name="signup" class="newsletter-capture-form">
-      <input id="id_prev_member_email" name="prev_member_email" type="hidden">
-      <input id="id_source" name="source" type="hidden">
-      <input name="prev_member_email" type="hidden" value="">
-      <div class="form-fields__fields-wrapper">
-       <div class="field">
-        <div class="field-html ">
-         <input  id="id_email" type="email" class="red-input" placeholder="¡Your Email!" name="email">
-        </div>
-       </div>
-      </div>
-
-      <div class="form-button">
-       <input id="form-submit-input" name="Submit" type="submit" value="Submit" class='outline-button'>
-      </div>
-     </form> -->
-
-
-
+<div pageID="wsapo61seemozganok87vw"></div>
 
 
 
