--- a/templates/the_mercado.html
+++ b/templates/the_mercado.html
@@ -54,7 +54,7 @@
 
     <div class="mercado-map-cont">
       <div class="mercado-map-inner">
-        {% include 'MLS_map.svg' %}
+        {% include 'MLS_map_2.svg' %}
         <div class="mercado-map-hover-box">
           <img src="" alt="">
           <span></span>
