--- a/assets/css/_the_mercado.scss
+++ b/assets/css/_the_mercado.scss
@@ -226,9 +226,11 @@
     position: relative;
     width: 1024px;
     margin: auto;
+    padding: 40px 0;
     @media (max-width: 767px){
       position: initial;
     }
+
 }
 
 .mercado-map-cont{
@@ -241,9 +243,9 @@
     // position: initial;
   }
   svg{
-    width: 1024px;
+    width: 1000px;
     // width: 100%;
-    margin: auto;
+    // margin: 30px auto;
     display: block;
     text{
       .st3, &.st3{
