--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,7 @@
 
 
 
-<section class="home-hero">
-  <!-- <img src="{{pages.by_slug.home.fields['home-hero-image'].image.url}}" alt="{{pages.by_slug.home.fields['home-hero-image'].image.alt}}"> -->
-
-
+<!-- <section class="home-hero">
   <video id="home-video-img" loop muted autoplay playsinline>
 
       <source src="{{static('img/home-bg.mp4')}}" type="video/mp4">
@@ -20,11 +17,7 @@
 
   </video>
 
-
-
-  <!-- <img src="{{static('img/home-bg.gif')}}" alt="Home Image" class='home-hero-image'>
-  <img src="{{static('img/home-bg-mobile.gif')}}" alt="Home Image" class="home-hero-mobile"> -->
-</section>
+</section> -->
 
 
 <section class="home-slides">
