new map filter states

--- a/assets/css/_the_mercado.scss
+++ b/assets/css/_the_mercado.scss
@@ -266,7 +266,7 @@
       text{
         pointer-events: none;
       }
-      rect.st0,polygon.st0{
+      rect,polygon{
         fill: #fdf16f24;
         pointer-events: none;
 
@@ -278,7 +278,7 @@
       text{
         pointer-events: none;
       }
-      rect.st0,polygon.st0{
+      rect,polygon{
         fill: #fdf16f24;
         pointer-events: none;
       }
@@ -292,7 +292,7 @@
       text{
         pointer-events: none;
       }
-      rect.st0,polygon.st0{
+      rect,polygon{
         fill: #fdf16f24;
         pointer-events: none;
       }
@@ -306,7 +306,7 @@
       text{
         pointer-events: none;
       }
-      rect.st0,polygon.st0{
+      rect,polygon{
         fill: #fdf16f24;
         pointer-events: none;
       }
@@ -318,7 +318,7 @@
       text{
         pointer-events: auto;
       }
-      rect.st0,polygon.st0{
+      rect,polygon{
         fill: #FDF16F;
         pointer-events: auto;
       }
@@ -329,7 +329,7 @@
       text{
         pointer-events: none;
       }
-      rect.st0,polygon.st0{
+      rect,polygon{
         fill: #fdf16f24;
         pointer-events: none;
       }
@@ -338,7 +338,7 @@
       }
     }
     .svg-stall-cont[cat='sweet savory ']{
-      rect.st0,polygon.st0{
+      rect,polygon{
         fill: #FDF16F;
         pointer-events: auto;
       }
@@ -352,7 +352,7 @@
       text{
         pointer-events: none;
       }
-      rect.st0,polygon.st0{
+      rect,polygon{
         fill: #fdf16f24;
         pointer-events: none;
       }
@@ -361,7 +361,7 @@
       }
     }
     .svg-stall-cont[cat='sweet savory ']{
-      rect.st0,polygon.st0{
+      rect,polygon{
         fill: #FDF16F;
         pointer-events: auto;
 
