--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
 <!-- .container close -->
 </div>
 
-{% include "newsletter_popup.html" %}
+<!-- {% include "newsletter_popup.html" %} -->
 
 
 <footer id="newsletter-capture" class="site-footer">
@@ -17,7 +17,8 @@
 
 
   </div>
-</footer><!-- #newsletter-capture -->
+</footer>
+
 <footer id="logo-carousel" class="site-footer">
   <div class="content-margins">
     <ul class="partner-carousel">
