--- a/templates/index.html
+++ b/templates/index.html
@@ -407,7 +407,7 @@
   </div>
 </section>
 
-<section class="ig-feed">
+<!-- <section class="ig-feed">
   <div class="content-margins">
     <div class="ig-boxes">
       <div class="ig-box edge-box">
@@ -419,7 +419,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 
