update: added theme custom Styles to header

--- a/templates/header.html
+++ b/templates/header.html
@@ -142,6 +142,12 @@
   <script type="text/javascript">var loc = "https://analytics.clickdimensions.com/thinkfoodgroupcom-aqnie/pages/";</script>
   <script type="text/javascript" src="https://az124611.vo.msecnd.net/web/v10/CDWidget.js"></script>
 
+  <!-- Custom Styles -->
+{% if theme.options.custom_styles.CSS %}
+<style type='text/css'>
+{{ theme.options.custom_styles.CSS }}
+</style>
+{% endif %}
 
 </head>
 
