bug: popup still being shown fixed!

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
 <!-- .container close -->
 </div>
 
-<!-- {% include "newsletter_popup.html" %} -->
+{% include "newsletter_popup.html" %}
 
 
 <footer id="newsletter-capture" class="site-footer">
