bug: removed IG feed from mercado

--- a/templates/the_mercado.html
+++ b/templates/the_mercado.html
@@ -272,7 +272,7 @@
 </section>
 {% endif %}
 
-<section class="ig-feed">
+<!-- <section class="ig-feed">
   <div class="content-margins">
     <div class="ig-boxes">
       <div class="ig-box edge-box">
@@ -284,7 +284,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 {% include "footer.html" %}
