--- a/templates/contact.html
+++ b/templates/contact.html
@@ -212,5 +212,5 @@
 
 </script>
 <script async defer
-   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtQFGERnOCSNJj-6xd45qFRhwwT-kNWJ8&callback=initMap"></script>
+   src="https://maps.googleapis.com/maps/api/js?key={{ account.services.google_maps.api_key }}&callback=initMap"></script>
 {% include "footer.html" %}
