--- a/templates/footer.html
+++ b/templates/footer.html
@@ -61,9 +61,15 @@
             </li>
           {% endif %}
           <li class='footer-social-menu'>
-            <a href="{{account.services.instagram.url}}" target="_blank" class='social-email'><img src="{{ static('img/instagram.png') }}" alt="Email Icon"></a>
-            <a href="{{account.services.facebook.url}}" target="_blank" class='social-fb'><img src="{{ static('img/Facebook.png') }}" alt="Facebook Icon"></a>
-            <a href="{{account.services.twitter.url}}" target="_blank" class='social-twitter'><img src="{{ static('img/Twitter.png') }}" alt="Twitter Icon"></a>
+            {% if account.services.instagram.url %}
+              <a href="{{account.services.instagram.url}}" target="_blank" class='social-email'><img src="{{ static('img/instagram.png') }}" alt="Email Icon"></a>
+            {% endif %}
+            {% if account.services.facebook.url %}
+              <a href="{{account.services.facebook.url}}" target="_blank" class='social-email'><img src="{{ static('img/instagram.png') }}" alt="Email Icon"></a>
+            {% endif %}
+            {% if account.services.twitter.url %}
+              <a href="{{account.services.twitter.url}}" target="_blank" class='social-email'><img src="{{ static('img/instagram.png') }}" alt="Email Icon"></a>
+            {% endif %}
           </li>
         </ul>
       </nav><!-- .footer-navigation -->
